# FirstRepo

./: README.md  nilmtk-0.1.2-py3-none-any.whl  pyproject.toml
nilmtk/datastore/: hdfdatastore.py
nilmtk/disaggregate/: hart_85.py
nilmtk/tests/: generate_data.py
